fix: mobile navbar spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,12 @@ html {
   --background: #ffffff;
   --foreground: #171717;
 }
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
